test/types/integral/tooBig.good
tooBig.chpl:1: error: error building numeric literal: Integer literal overflow: '1000000000000000000000000000000' is too big for type 'uint64'
